--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kris/laravel-form-builder": "^1.54",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "tcg/voyager": "^1.8"
