--- a/src/composer.json
+++ b/src/composer.json
@@ -11,7 +11,8 @@
         "kris/laravel-form-builder": "^1.54",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "tcg/voyager": "^1.8"
+        "tcg/voyager": "^1.8",
+        "twilio/sdk": "^8.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
